--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,23 @@
 asgiref==3.4.1
+certifi==2021.10.8
+charset-normalizer==2.0.9
+defusedxml==0.7.1
+dj-database-url==0.5.0
 Django==3.2.9
 django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==1.13.0
+flake8-django==1.1.2
+flake8-flask==0.9.3
+idna==3.3
 oauthlib==3.1.1
 Pillow==8.4.0
+psycopg2-binary==2.9.2
 python3-openid==3.2.0
 pytz==2021.3
+r2c-py-ast==0.1.0b1
+requests==2.26.0
 requests-oauthlib==1.3.0
 sqlparse==0.4.2
 stripe==2.63.0
+urllib3==1.26.7
