--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,17 @@ Django==3.2.9
 django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==1.13.0
+flake8==3.9.2
 flake8-django==1.1.2
 flake8-flask==0.9.3
+gunicorn==20.1.0
 idna==3.3
+mccabe==0.6.1
 oauthlib==3.1.1
 Pillow==8.4.0
 psycopg2-binary==2.9.2
+pycodestyle==2.7.0
+pyflakes==2.3.1
 python3-openid==3.2.0
 pytz==2021.3
 r2c-py-ast==0.1.0b1
